--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -25,6 +25,9 @@
 .fondo-rojo-claro
   background-color: #FCE4E6 !important
 
+.fondo-verde-claro
+  background-color: #D5F8FA !important  
+
 .fondo-morado-claro
   background-color: #F1E6FF !important
 
