--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -1,5 +1,7 @@
-.bloque-texto-b i:last-of-type
-  vertical-align: top
+.titulo-principal__numero .h3
+  color: #F17781 !important
+
+.titulo-principal__numero .h3
 
 .fondo-color-primario
   background-color: $color-primario !important
