Se corrigen los hallazgos

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -147,6 +147,22 @@ iframe
 .bloque9
   background-color: #E8E8e8
 
+.bloque10
+  background-color: #FDF8DD !important
+
+.bloque11
+  background-color: #D15560 !important
+
+.linea-tiempo-d__item__dots:after 
+  content: ''
+  display: block
+  width: 0
+  height: 100%
+  border-left: 5px dotted #D2E1F1
+
+  
+  
+
   
 
   
