Se ajustan los hallazgos

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -51,7 +51,7 @@
   margin-top: -15px
 
 .linea-tiempo-d__item__content
-  background-color: #F1E6FF !important
+  background-color: #EEE0FF !important
   
 
 .texto-color-acento-botones
@@ -152,6 +152,8 @@ iframe
 
 .bloque11
   background-color: #D15560 !important
+
+
 
 .linea-tiempo-d__item__dots:after 
   content: ''
