--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -1,3 +1,8 @@
+.BorTit
+  border-left: 5px solid $color-acento-botones
+  padding: 6px 0px 6px 10px
+  margin-top: 6px
+
 .titulo-principal__numero .h3
   color: #F17781 !important
 
