Vinculacion de videos con material

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -167,8 +167,11 @@ iframe
   height: 100%
   border-left: 5px dotted #D2E1F1
 
-  
-  
+.tabs-c.color-acento-contenido .tabs-c__tab--active
+    border-bottom-color: #F9E478 !important
+    font-weight: bold
+
+
 
   
 
