Se actualiza la base de version 3.1 a 3.2
Diosito, has funcionar esta joda

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -3,10 +3,8 @@
   padding: 6px 0px 6px 10px
   margin-top: 6px
 
-.titulo-principal__numero .h3
+.titulo-principal__numero span
   color: #F17781 !important
-
-.titulo-principal__numero .h3
 
 .fondo-color-primario
   background-color: $color-primario !important
